[tool.poetry]
name = "apce"
version = "0.1.0"
description = ""
authors = ["masfana016 <masfanasrullahansari123@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python
fastapi
python-dotenv
langchain
crewai
replicate
langchain-google-genai
matplotlib
crewai-tools
requests
pydantic
astropy
skyfield
tavily-python
plotly
numpy
streamlit
pandas
wikipedia
langgraph


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
